force-app/main/default/objects/Customisation_Option__c/Customisation_Option__c.object-meta.xml
<CustomObject>
    <description>CSR-managed catalog of selectable option values (category, metal type, stone type, colour, budget guide, timeline) shown to customers in the Experience Cloud Customise wizard. Lets support staff add or retire options without a metadata deployment.</description>
    <label>Custom Product Customization Menu</label>
    <nameField>
        <label>Option Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Product Customization Menu</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>