force-app/main/default/objects/Customisation_Option__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional short blurb shown under the option on the Customise wizard (used for Category cards, e.g. &quot;Cocktail, eternity and signature bands&quot;).</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>