force-app/main/default/objects/Customisation_Option__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to retire an option without deleting it. Only active options are shown to customers.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>