force-app/main/default/objects/Customisation_Option__c/fields/Option_Type__c.field-meta.xml
<CustomField>
    <fullName>Option_Type__c</fullName>
    <description>Which selectable list on the Customise wizard this option belongs to. Adding a new type here requires an engineering change; adding new values within a type does not.</description>
    <label>Option Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Metal Type</fullName>
            </value>
            <value>
                <fullName>Stone Type</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Budget Guide</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>