force-app/main/default/objects/Customisation_Option__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Controls display order within an Option Type on the Customise wizard, lowest first.</description>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>