force-app/main/default/objects/Customisation_Option__c/listViews/Active_Options.listView-meta.xml
<ListView>
    <fullName>Active_Options</fullName>
    <columns>NAME</columns>
    <columns>Option_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Options</label>
</ListView>